--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "0.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -34,7 +36,10 @@
   "devDependencies": {
     "antd": "^3.26.6",
     "axios": "^0.19.0",
+    "expressions": "^1.1.4",
+    "keywords": "^0.1.2",
     "node-sass": "^4.13.0",
+    "qs": "^6.9.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
