--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "antd": "^3.26.6",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
     "expressions": "^1.1.4",
     "keywords": "^0.1.2",
     "node-sass": "^4.13.0",
